tests/ui/imports/import-loop-2.stderr
error[E0432]: unresolved import `a::x`
  --> $DIR/import-loop-2.rs:6:13
   |
LL |     pub use a::x;
   |             ^^^^ no `x` in `a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
